# mimi

./: .gitignore  Cargo.toml  README.md
src/: agent_loop.rs  approval.rs  command_line_parser.rs  context.rs  events.rs  interactive.rs  json.rs  main.rs  models.rs  parser.rs  response.rs  response_sample.json  runtime.rs  tools.rs
src/models/: openai.rs
src/prompts/: system_prompt.md
src/tools/: approval.rs  bash.rs  edit.rs  file_search.rs  read.rs  shell.rs  todo.rs  write.rs
