[package]
name = "mimi"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
strum = { version = "0.26", features = ["derive"] }
reqwest-streams = {version = "0.17", features = ["json"]}
futures = "0.3"
fff-search = "0.9.6"
uuid = { version = "1.16", features = ["v4", "v7"] }
anyhow = "1.0.103"