[package]
name = "mimi-ai"
version = "0.1.4"
edition = "2024"
description = "A basic AI agent harness"
license = "MIT"
repository = "https://github.com/yogesharc/mimi"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.2", features = ["derive"] }
dotenvy = "0.15"
fff-search = "0.10.0"
futures = "0.3"
reqwest = { version = "0.13", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread", "sync"] }
uuid = { version = "1.16", features = ["v7"] }
